Playing around with adding hostgroups

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -6,6 +6,8 @@
     %li
       = link_to("Clients", clients_path)
     %li
+      = link_to("Hostgroups", hostgroups_path)
+    %li
       = link_to("Stashes", stashes_path)
     %li
       = link_to("Checks", checks_path)
