--- a/app/views/hostgroups/index.html.haml
+++ b/app/views/hostgroups/index.html.haml
@@ -1,9 +1,14 @@
 %div{:class => "modal small-modal hide", :id => "client-data-modal"}
 %div{:style => "display: none;", :id => "use_environments", :rel => "#{use_environments?}"}
 
-%p= @clients.methods.sort
 
 - @clients.sort_by(&:name).each do |client|
+  - client_history = client.history ## one get per client
+  - keepalive_history = client_history.select { |ch| ch['check'] == 'keepalive' }
   %h5= client.name
+  %p= keepalive_history
   - @checks.select{ |check| check.subscribers & client.subscriptions != [] }.each do |check|
+    - check_history = client_history.select { |ch| ch['check'] == check.name }
     %p= check.name
+    %p= check_history
+
